# sydny-voice-assistant-automation-tool

./: .gitignore  3:22:2026_sydny_new_UI.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
sydny-software/: dev.sh
sydny-software/backend/: app.py  database.py  models.py  platform_utils.py  requirements.txt  schemas.py  sydny.db  system_control.py
sydny-software/backend/routes/: platform.py  system.py  tasks.py  voice.py
sydny-software/backend/services/: command_parser.py  voice_service.py
sydny-software/client/: package-lock.json  package.json  tailwind.config.js
sydny-software/client/src/: App.css  App.tsx
sydny-software/client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
sydny-software/client/src-tauri/src/: lib.rs
sydny-software/docs/: api.md  backend_requirements.txt
sydny-software/frontend/: index.html  package-lock.json  package.json
sydny-software/frontend/src/: App.tsx
sydny-software/frontend/src-tauri/: tauri.conf.json
sydny-software/server/: app.py  backend_requirements.txt  database.py  requirements.txt  run.py  sydny-server.spec
sydny-software/server/engine/: memory.py  reason.py  sydny.Modelfile
sydny-software/server/models/: memory_model.py  tasks_models.py
sydny-software/server/routes/: platform.py  system.py  tasks.py  voice.py
sydny-software/server/schemas/: system_schemas.py  tasks_schemas.py
sydny-software/server/services/: system_control.py  voice_command_parser.py  (+1 more)
(+21 files in other folders)
